# FreeEngine

./: .gitignore
demos/: CMakeLists.txt
demos/demo4_lua/src/: ModuleTest.h
demos/unity_demo1_chat/: README.md
demos/unity_demo1_chat/chatserver/: CMakeLists.txt
demos/unity_demo1_chat/chatserver/src/: ModuleServer.cpp  msg.pb.cc  msg.pb.h  strnormalize.cpp  strnormalize.h
demos/unity_demo1_chat/proto/: Gen.bat  README.md  msg.proto
demos/unity_demo1_chat/unity5_3_client/chat_demo/Assets/__scene/: main.unity
demos/unity_demo1_chat/unity5_3_client/chat_demo/Assets/_script/: main.cs  socketClient.cs
demos/unity_demo1_chat/unity5_3_client/chat_demo/ProjectSettings/: ProjectSettings.asset
module/modulelua/src/: luaoptutil.cpp
